--- a/GUIs/Viewer/resources/Viewer.ui
+++ b/GUIs/Viewer/resources/Viewer.ui
@@ -222,6 +222,31 @@ QTabBar::tab:only-one {
           <number>-1</number>
          </property>
          <item>
+          <widget class="Gradient" name="grey" native="true">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>100</width>
+             <height>0</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>100</width>
+             <height>16777215</height>
+            </size>
+           </property>
+           <property name="toolTip">
+            <string>grey</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="Gradient" name="viridis" native="true">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
