--- a/GUIs/Viewer/resources/Viewer.ui
+++ b/GUIs/Viewer/resources/Viewer.ui
@@ -19,8 +19,8 @@
   <property name="styleSheet">
    <string notr="true"/>
   </property>
-  <layout class="QGridLayout" name="gridLayout" rowstretch="10,0,0" columnstretch="0,0,0,0,0,0">
-   <item row="0" column="0" colspan="4">
+  <layout class="QGridLayout" name="gridLayout" rowstretch="10,0,0" columnstretch="0,0,0,0,0,0,0">
+   <item row="0" column="0" colspan="5">
     <widget class="Img" name="image" native="true">
      <property name="styleSheet">
       <string notr="true">border-style: solid;
@@ -29,20 +29,27 @@ border-color: black;</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="2">
-    <spacer name="hmag_overlay_spacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+   <item row="1" column="4">
+    <widget class="QCheckBox" name="overlay">
+     <property name="text">
+      <string>Overlay</string>
      </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
+     <property name="checked">
+      <bool>false</bool>
      </property>
-    </spacer>
+    </widget>
    </item>
-   <item row="0" column="5" rowspan="3">
+   <item row="1" column="0">
+    <widget class="QLabel" name="hmag_label">
+     <property name="styleSheet">
+      <string notr="true">border-style: none;</string>
+     </property>
+     <property name="text">
+      <string>Hmag:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="6" rowspan="3">
     <widget class="QPushButton" name="minimize_btn">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
@@ -81,26 +88,6 @@ QPushButton {
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="hmag_label">
-     <property name="styleSheet">
-      <string notr="true">border-style: none;</string>
-     </property>
-     <property name="text">
-      <string>Hmag:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="3">
-    <widget class="QCheckBox" name="overlay">
-     <property name="text">
-      <string>Overlay</string>
-     </property>
-     <property name="checked">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
    <item row="1" column="1">
     <widget class="QLineEdit" name="hmag_field">
      <property name="sizePolicy">
@@ -116,7 +103,20 @@ border-style: solid;</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="4" rowspan="2">
+   <item row="1" column="2">
+    <spacer name="hmag_overlay_spacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="0" column="5" rowspan="2">
     <widget class="QTabWidget" name="interfaces">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -1777,6 +1777,19 @@ QPushButton {
        </item>
       </layout>
      </widget>
+    </widget>
+   </item>
+   <item row="1" column="3">
+    <widget class="QCheckBox" name="base_img_chk">
+     <property name="toolTip">
+      <string>If checked, image processing will start from the image that the tracking loop is using. Otherwise, a raw image will be used to start</string>
+     </property>
+     <property name="text">
+      <string>Use Tracking</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
   </layout>
