--- a/GUIs/Viewer/resources/Viewer.ui
+++ b/GUIs/Viewer/resources/Viewer.ui
@@ -51,7 +51,7 @@ QPushButton:pressed {
     </widget>
    </item>
    <item row="2" column="0" colspan="4">
-    <layout class="QGridLayout" name="view_opt_layout" columnstretch="0,0,0,0,0">
+    <layout class="QGridLayout" name="view_opt_layout" columnstretch="0,0,0,0,0,0">
      <item row="0" column="0">
       <widget class="QLabel" name="hmag_label">
        <property name="styleSheet">
@@ -59,42 +59,6 @@ QPushButton:pressed {
        </property>
        <property name="text">
         <string>Hmag:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="4">
-      <widget class="QCheckBox" name="overlay">
-       <property name="text">
-        <string>Overlay</string>
-       </property>
-       <property name="checked">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <spacer name="hmag_overlay_spacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="0" column="3">
-      <widget class="QCheckBox" name="base_img_chk">
-       <property name="toolTip">
-        <string>If checked, image processing will start from the image that the tracking loop is using. Otherwise, a raw image will be used to start</string>
-       </property>
-       <property name="text">
-        <string>Use Tracking</string>
-       </property>
-       <property name="checked">
-        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -134,7 +98,43 @@ QLineEdit:!enabled
        </property>
       </widget>
      </item>
-     <item row="1" column="0" colspan="5">
+     <item row="0" column="5">
+      <widget class="QCheckBox" name="overlay">
+       <property name="text">
+        <string>Overlay</string>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="4">
+      <widget class="Base_use_chk" name="base_img_chk">
+       <property name="toolTip">
+        <string>If checked, image processing will start from the image that the tracking loop is using. Otherwise, a raw image will be used to start</string>
+       </property>
+       <property name="text">
+        <string>Use Tracking</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <spacer name="hmag_overlay_spacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="1" column="0" colspan="6">
       <layout class="QHBoxLayout" name="cam_config_layout" stretch="0,0,10,0,0,10,0,0">
        <item>
         <widget class="QLabel" name="fps_lbl">
@@ -299,6 +299,13 @@ QLineEdit:!focus
        </item>
       </layout>
      </item>
+     <item row="0" column="3">
+      <widget class="Raw_im_chk" name="raw_view">
+       <property name="text">
+        <string>View Raw</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item row="0" column="8" rowspan="3">
@@ -442,6 +449,9 @@ QTabBar::tab:only-one {
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="1" column="1">
         <widget class="QFrame" name="subtraction_frame">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
@@ -456,7 +466,7 @@ border-width: 1px;</string>
          <property name="frameShape">
           <enum>QFrame::Panel</enum>
          </property>
-         <layout class="QGridLayout" name="gridLayout_12" columnstretch="3,1,1">
+         <layout class="QGridLayout" name="gridLayout_12" columnstretch="3,1,1,1">
           <property name="leftMargin">
            <number>10</number>
           </property>
@@ -496,30 +506,6 @@ border-width: 1px;</string>
             </property>
             <property name="text">
              <string>Reference frame</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="2">
-           <widget class="QPushButton" name="bias_save">
-            <property name="toolTip">
-             <string/>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">QPushButton { 
-	background-color: #c7c7c7;
-	border-radius: 0px;
-	border-style: inset;
-	border-width: 1px;
-}
-QPushButton:pressed {
-	background-color: white;
-	border-radius: 0px;
-	border-style: outset;
-	border-width: 1px;
-}</string>
-            </property>
-            <property name="text">
-             <string>Save</string>
             </property>
            </widget>
           </item>
@@ -607,6 +593,72 @@ QPushButton:pressed {
             </property>
            </widget>
           </item>
+          <item row="1" column="3">
+           <widget class="QPushButton" name="bkgrd_load">
+            <property name="styleSheet">
+             <string notr="true">QPushButton { 
+	background-color: #c7c7c7;
+	border-radius: 0px;
+	border-style: inset;
+	border-width: 1px;
+}
+QPushButton:pressed {
+	background-color: white;
+	border-radius: 0px;
+	border-style: outset;
+	border-width: 1px;
+}</string>
+            </property>
+            <property name="text">
+             <string>Load</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="3">
+           <widget class="QPushButton" name="ref_load">
+            <property name="styleSheet">
+             <string notr="true">QPushButton { 
+	background-color: #c7c7c7;
+	border-radius: 0px;
+	border-style: inset;
+	border-width: 1px;
+}
+QPushButton:pressed {
+	background-color: white;
+	border-radius: 0px;
+	border-style: outset;
+	border-width: 1px;
+}</string>
+            </property>
+            <property name="text">
+             <string>Load</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="3">
+           <widget class="QPushButton" name="bias_save">
+            <property name="toolTip">
+             <string/>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">QPushButton { 
+	background-color: #c7c7c7;
+	border-radius: 0px;
+	border-style: inset;
+	border-width: 1px;
+}
+QPushButton:pressed {
+	background-color: white;
+	border-radius: 0px;
+	border-style: outset;
+	border-width: 1px;
+}</string>
+            </property>
+            <property name="text">
+             <string>Save</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
@@ -662,7 +714,35 @@ border-width: 1px;</string>
          </layout>
         </widget>
        </item>
-       <item row="5" column="1">
+       <item row="4" column="1">
+        <widget class="QLabel" name="smoot_label">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>40</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">border-width: 1px;
+border-style: solid;
+border-left-style: none;
+border-right-style: none;</string>
+         </property>
+         <property name="text">
+          <string>Smoothing</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="7" column="1">
         <layout class="QHBoxLayout" name="horizontalLayout">
          <property name="spacing">
           <number>-1</number>
@@ -850,11 +930,46 @@ border-right-style: none;</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="1">
-        <widget class="QCheckBox" name="med_filt">
-         <property name="text">
-          <string>Median filter</string>
+       <item row="5" column="1">
+        <widget class="QFrame" name="smooth_frame">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
          </property>
+         <property name="styleSheet">
+          <string notr="true">border-radius: 10px;
+border-style: ridge;
+border-width: 1px;</string>
+         </property>
+         <property name="frameShape">
+          <enum>QFrame::Panel</enum>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_13" columnstretch="0">
+          <property name="leftMargin">
+           <number>10</number>
+          </property>
+          <property name="topMargin">
+           <number>10</number>
+          </property>
+          <property name="rightMargin">
+           <number>15</number>
+          </property>
+          <property name="bottomMargin">
+           <number>10</number>
+          </property>
+          <item row="0" column="0" alignment="Qt::AlignHCenter">
+           <widget class="QCheckBox" name="med_filt">
+            <property name="styleSheet">
+             <string notr="true">border-style: none</string>
+            </property>
+            <property name="text">
+             <string>Median filter</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </widget>
        </item>
       </layout>
@@ -2119,6 +2234,16 @@ QPushButton:pressed {
   <customwidget>
    <class>Save_block</class>
    <extends>QPushButton</extends>
+   <header>Viewer_Widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Raw_im_chk</class>
+   <extends>QCheckBox</extends>
+   <header>Viewer_Widgets.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Base_use_chk</class>
+   <extends>QCheckBox</extends>
    <header>Viewer_Widgets.h</header>
   </customwidget>
  </customwidgets>
