--- a/GUIs/Viewer/resources/Viewer.ui
+++ b/GUIs/Viewer/resources/Viewer.ui
@@ -17,7 +17,21 @@
    <string>Form</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">QPushButton:enabled { 
+	background-color: #c7c7c7;
+	border-style: inset;
+	border-width: 1px;
+}
+QPushButton:pressed {
+	background-color: white;
+	border-style: outset;
+	border-width: 1px;
+}
+QPushButton:!enabled {
+	background-color: #d9d9d9;
+	border-style: outset;
+	border-width: 1px;
+}</string>
   </property>
   <layout class="QGridLayout" name="gridLayout" rowstretch="0,10,0" columnstretch="0,0,10,0,0,0,0,0,0">
    <item row="1" column="0" colspan="4">
@@ -32,18 +46,7 @@ border-color: black;</string>
    <item row="0" column="3">
     <widget class="Save_block" name="save_block">
      <property name="styleSheet">
-      <string notr="true">QPushButton { 
-	background-color: #c7c7c7;
-	border-radius: 0px;
-	border-style: inset;
-	border-width: 1px;
-}
-QPushButton:pressed {
-	background-color: white;
-	border-radius: 0px;
-	border-style: outset;
-	border-width: 1px;
-}</string>
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>Save block</string>
@@ -52,89 +55,14 @@ QPushButton:pressed {
    </item>
    <item row="2" column="0" colspan="4">
     <layout class="QGridLayout" name="view_opt_layout" columnstretch="0,0,0,0,0,0">
-     <item row="0" column="0">
-      <widget class="QLabel" name="hmag_label">
-       <property name="styleSheet">
-        <string notr="true">border-style: none;</string>
-       </property>
+     <item row="0" column="3">
+      <widget class="Raw_im_chk" name="raw_view">
        <property name="text">
-        <string>Hmag:</string>
+        <string>View Raw</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="hmag_field">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QLineEdit:focus
-{
-	border-color: black;
-	border-width: 1px;
-	border-style: solid;
-	background-color:white;
-}
-QLineEdit:!focus
-{
-	border-color: black;
-	border-width: 1px;
-	border-style: solid;
-	background-color: rgba(0, 0, 0, 15);
-}
-QLineEdit:!enabled
-{
-	border-color: black;
-	border-width: 1px;
-	border-style: solid;
-	background-color: rgba(0, 0, 0, 75);
-}</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="5">
-      <widget class="QCheckBox" name="overlay">
-       <property name="text">
-        <string>Overlay</string>
-       </property>
-       <property name="checked">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="4">
-      <widget class="Base_use_chk" name="base_img_chk">
-       <property name="toolTip">
-        <string>If checked, image processing will start from the image that the tracking loop is using. Otherwise, a raw image will be used to start</string>
-       </property>
-       <property name="text">
-        <string>Use Tracking</string>
-       </property>
-       <property name="checked">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <spacer name="hmag_overlay_spacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="1" column="0" colspan="6">
+     <item row="2" column="0" colspan="6">
       <layout class="QHBoxLayout" name="cam_config_layout" stretch="0,0,10,0,0,10,0,0">
        <item>
         <widget class="QLabel" name="fps_lbl">
@@ -299,12 +227,140 @@ QLineEdit:!focus
        </item>
       </layout>
      </item>
-     <item row="0" column="3">
-      <widget class="Raw_im_chk" name="raw_view">
+     <item row="0" column="2">
+      <spacer name="hmag_overlay_spacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item row="0" column="4">
+      <widget class="Base_use_chk" name="base_img_chk">
+       <property name="toolTip">
+        <string>If checked, image processing will start from the image that the tracking loop is using. Otherwise, a raw image will be used to start</string>
+       </property>
        <property name="text">
-        <string>View Raw</string>
+        <string>Use Tracking</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
        </property>
       </widget>
+     </item>
+     <item row="0" column="5">
+      <widget class="QCheckBox" name="overlay">
+       <property name="text">
+        <string>Overlay</string>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="hmag_field">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QLineEdit:focus
+{
+	border-color: black;
+	border-width: 1px;
+	border-style: solid;
+	background-color:white;
+}
+QLineEdit:!focus
+{
+	border-color: black;
+	border-width: 1px;
+	border-style: solid;
+	background-color: rgba(0, 0, 0, 15);
+}
+QLineEdit:!enabled
+{
+	border-color: black;
+	border-width: 1px;
+	border-style: solid;
+	background-color: rgba(0, 0, 0, 75);
+}</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="hmag_label">
+       <property name="styleSheet">
+        <string notr="true">border-style: none;</string>
+       </property>
+       <property name="text">
+        <string>Hmag:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0" colspan="6">
+      <layout class="QHBoxLayout" name="horizontalLayout_3">
+       <item>
+        <widget class="QPushButton" name="rst_zoom">
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string>Reset Zoom</string>
+         </property>
+         <property name="flat">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="zoom_spacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="sv_zoom">
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string>Save Zoom</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="ld_zoom">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string>Load Zoom</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
    </item>
@@ -459,9 +515,12 @@ QTabBar::tab:only-one {
           </sizepolicy>
          </property>
          <property name="styleSheet">
-          <string notr="true">border-radius: 10px;
-border-style: ridge;
-border-width: 1px;</string>
+          <string notr="true">QFrame
+{
+	border-radius: 10px;
+	border-style: ridge;
+	border-width: 1px;
+}</string>
          </property>
          <property name="frameShape">
           <enum>QFrame::Panel</enum>
@@ -482,7 +541,7 @@ border-width: 1px;</string>
           <item row="0" column="0">
            <widget class="QCheckBox" name="bias_sub">
             <property name="styleSheet">
-             <string notr="true">border-style:none;</string>
+             <string notr="true"/>
             </property>
             <property name="text">
              <string>Bias / Dark</string>
@@ -492,7 +551,7 @@ border-width: 1px;</string>
           <item row="1" column="0">
            <widget class="QCheckBox" name="bkgrd_sub">
             <property name="styleSheet">
-             <string notr="true">border-style:none;</string>
+             <string notr="true"/>
             </property>
             <property name="text">
              <string>Background</string>
@@ -502,7 +561,7 @@ border-width: 1px;</string>
           <item row="2" column="0">
            <widget class="QCheckBox" name="ref_sub">
             <property name="styleSheet">
-             <string notr="true">border-style:none;</string>
+             <string notr="true"/>
             </property>
             <property name="text">
              <string>Reference frame</string>
@@ -512,18 +571,7 @@ border-width: 1px;</string>
           <item row="1" column="1">
            <widget class="QPushButton" name="bkgrd_take">
             <property name="styleSheet">
-             <string notr="true">QPushButton { 
-	background-color: #c7c7c7;
-	border-radius: 0px;
-	border-style: inset;
-	border-width: 1px;
-}
-QPushButton:pressed {
-	background-color: white;
-	border-radius: 0px;
-	border-style: outset;
-	border-width: 1px;
-}</string>
+             <string notr="true"/>
             </property>
             <property name="text">
              <string>Take</string>
@@ -533,18 +581,7 @@ QPushButton:pressed {
           <item row="1" column="2">
            <widget class="QPushButton" name="bkgrd_save">
             <property name="styleSheet">
-             <string notr="true">QPushButton { 
-	background-color: #c7c7c7;
-	border-radius: 0px;
-	border-style: inset;
-	border-width: 1px;
-}
-QPushButton:pressed {
-	background-color: white;
-	border-radius: 0px;
-	border-style: outset;
-	border-width: 1px;
-}</string>
+             <string notr="true"/>
             </property>
             <property name="text">
              <string>Save</string>
@@ -554,18 +591,7 @@ QPushButton:pressed {
           <item row="2" column="1">
            <widget class="QPushButton" name="ref_take">
             <property name="styleSheet">
-             <string notr="true">QPushButton { 
-	background-color: #c7c7c7;
-	border-radius: 0px;
-	border-style: inset;
-	border-width: 1px;
-}
-QPushButton:pressed {
-	background-color: white;
-	border-radius: 0px;
-	border-style: outset;
-	border-width: 1px;
-}</string>
+             <string notr="true"/>
             </property>
             <property name="text">
              <string>Take</string>
@@ -575,18 +601,7 @@ QPushButton:pressed {
           <item row="2" column="2">
            <widget class="QPushButton" name="ref_save">
             <property name="styleSheet">
-             <string notr="true">QPushButton { 
-	background-color: #c7c7c7;
-	border-radius: 0px;
-	border-style: inset;
-	border-width: 1px;
-}
-QPushButton:pressed {
-	background-color: white;
-	border-radius: 0px;
-	border-style: outset;
-	border-width: 1px;
-}</string>
+             <string notr="true"/>
             </property>
             <property name="text">
              <string>Save</string>
@@ -596,18 +611,7 @@ QPushButton:pressed {
           <item row="1" column="3">
            <widget class="QPushButton" name="bkgrd_load">
             <property name="styleSheet">
-             <string notr="true">QPushButton { 
-	background-color: #c7c7c7;
-	border-radius: 0px;
-	border-style: inset;
-	border-width: 1px;
-}
-QPushButton:pressed {
-	background-color: white;
-	border-radius: 0px;
-	border-style: outset;
-	border-width: 1px;
-}</string>
+             <string notr="true"/>
             </property>
             <property name="text">
              <string>Load</string>
@@ -617,18 +621,7 @@ QPushButton:pressed {
           <item row="2" column="3">
            <widget class="QPushButton" name="ref_load">
             <property name="styleSheet">
-             <string notr="true">QPushButton { 
-	background-color: #c7c7c7;
-	border-radius: 0px;
-	border-style: inset;
-	border-width: 1px;
-}
-QPushButton:pressed {
-	background-color: white;
-	border-radius: 0px;
-	border-style: outset;
-	border-width: 1px;
-}</string>
+             <string notr="true"/>
             </property>
             <property name="text">
              <string>Load</string>
@@ -641,18 +634,7 @@ QPushButton:pressed {
              <string/>
             </property>
             <property name="styleSheet">
-             <string notr="true">QPushButton { 
-	background-color: #c7c7c7;
-	border-radius: 0px;
-	border-style: inset;
-	border-width: 1px;
-}
-QPushButton:pressed {
-	background-color: white;
-	border-radius: 0px;
-	border-style: outset;
-	border-width: 1px;
-}</string>
+             <string notr="true"/>
             </property>
             <property name="text">
              <string>Save</string>
@@ -671,9 +653,12 @@ QPushButton:pressed {
           </sizepolicy>
          </property>
          <property name="styleSheet">
-          <string notr="true">border-radius: 10px;
-border-style: ridge;
-border-width: 1px;</string>
+          <string notr="true">QFrame
+{
+	border-radius: 10px;
+	border-style: ridge;
+	border-width: 1px;
+}</string>
          </property>
          <property name="frameShape">
           <enum>QFrame::Panel</enum>
@@ -694,7 +679,7 @@ border-width: 1px;</string>
           <item row="0" column="1" alignment="Qt::AlignLeft">
            <widget class="Scale_chk_box" name="sqrt_scl">
             <property name="styleSheet">
-             <string notr="true">border-style:none;</string>
+             <string notr="true"/>
             </property>
             <property name="text">
              <string>square root</string>
@@ -704,7 +689,7 @@ border-width: 1px;</string>
           <item row="0" column="0" alignment="Qt::AlignHCenter">
            <widget class="Scale_chk_box" name="log_scl">
             <property name="styleSheet">
-             <string notr="true">border-style:none;</string>
+             <string notr="true"/>
             </property>
             <property name="text">
              <string>log</string>
@@ -939,9 +924,12 @@ border-right-style: none;</string>
           </sizepolicy>
          </property>
          <property name="styleSheet">
-          <string notr="true">border-radius: 10px;
-border-style: ridge;
-border-width: 1px;</string>
+          <string notr="true">QFrame
+{
+	border-radius: 10px;
+	border-style: ridge;
+	border-width: 1px;
+}</string>
          </property>
          <property name="frameShape">
           <enum>QFrame::Panel</enum>
@@ -962,7 +950,7 @@ border-width: 1px;</string>
           <item row="0" column="0" alignment="Qt::AlignHCenter">
            <widget class="QCheckBox" name="med_filt">
             <property name="styleSheet">
-             <string notr="true">border-style: none</string>
+             <string notr="true"/>
             </property>
             <property name="text">
              <string>Median filter</string>
@@ -970,6 +958,34 @@ border-width: 1px;</string>
            </widget>
           </item>
          </layout>
+        </widget>
+       </item>
+       <item row="6" column="1">
+        <widget class="QLabel" name="smoot_label_2">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>40</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">border-width: 1px;
+border-style: solid;
+border-left-style: none;
+border-right-style: none;</string>
+         </property>
+         <property name="text">
+          <string>Zoom</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
         </widget>
        </item>
       </layout>
@@ -2128,18 +2144,7 @@ QPushButton {
    <item row="0" column="0">
     <widget class="Save_raw" name="save_raw">
      <property name="styleSheet">
-      <string notr="true">QPushButton { 
-	background-color: #c7c7c7;
-	border-radius: 0px;
-	border-style: inset;
-	border-width: 1px;
-}
-QPushButton:pressed {
-	background-color: white;
-	border-radius: 0px;
-	border-style: outset;
-	border-width: 1px;
-}</string>
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>Save raw</string>
@@ -2162,18 +2167,7 @@ QPushButton:pressed {
    <item row="0" column="1">
     <widget class="Save_proc" name="save_processed">
      <property name="styleSheet">
-      <string notr="true">QPushButton { 
-	background-color: #c7c7c7;
-	border-radius: 0px;
-	border-style: inset;
-	border-width: 1px;
-}
-QPushButton:pressed {
-	background-color: white;
-	border-radius: 0px;
-	border-style: outset;
-	border-width: 1px;
-}</string>
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>Save processed</string>
