--- a/GUIs/Viewer/resources/Viewer.ui
+++ b/GUIs/Viewer/resources/Viewer.ui
@@ -501,7 +501,7 @@ QTabBar::tab:only-one {
          <property name="frameShape">
           <enum>QFrame::Panel</enum>
          </property>
-         <layout class="QGridLayout" name="gridLayout_12" columnstretch="3,1,1,1">
+         <layout class="QGridLayout" name="gridLayout_12" columnstretch="3,0,0">
           <property name="leftMargin">
            <number>10</number>
           </property>
@@ -514,6 +514,22 @@ QTabBar::tab:only-one {
           <property name="bottomMargin">
            <number>15</number>
           </property>
+          <item row="2" column="1">
+           <widget class="Ref_save" name="ref_save">
+            <property name="minimumSize">
+             <size>
+              <width>50</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
+            </property>
+            <property name="text">
+             <string>Save</string>
+            </property>
+           </widget>
+          </item>
           <item row="0" column="0">
            <widget class="Bias_chk" name="bias_sub">
             <property name="styleSheet">
@@ -524,13 +540,19 @@ QTabBar::tab:only-one {
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
-           <widget class="Bkgrd_chk" name="bkgrd_sub">
+          <item row="1" column="1">
+           <widget class="Bkgrd_save" name="bkgrd_save">
+            <property name="minimumSize">
+             <size>
+              <width>50</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="styleSheet">
              <string notr="true"/>
             </property>
             <property name="text">
-             <string>Background</string>
+             <string>Save</string>
             </property>
            </widget>
           </item>
@@ -544,48 +566,24 @@ QTabBar::tab:only-one {
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
-           <widget class="QPushButton" name="bkgrd_take">
+          <item row="1" column="0">
+           <widget class="Bkgrd_chk" name="bkgrd_sub">
             <property name="styleSheet">
              <string notr="true"/>
             </property>
             <property name="text">
-             <string>Take</string>
+             <string>Background</string>
             </property>
            </widget>
           </item>
           <item row="1" column="2">
-           <widget class="Bkgrd_save" name="bkgrd_save">
-            <property name="styleSheet">
-             <string notr="true"/>
-            </property>
-            <property name="text">
-             <string>Save</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1">
-           <widget class="QPushButton" name="ref_take">
-            <property name="styleSheet">
-             <string notr="true"/>
-            </property>
-            <property name="text">
-             <string>Take</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="2">
-           <widget class="Ref_save" name="ref_save">
-            <property name="styleSheet">
-             <string notr="true"/>
-            </property>
-            <property name="text">
-             <string>Save</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="3">
            <widget class="Bkgrd_load" name="bkgrd_load">
+            <property name="minimumSize">
+             <size>
+              <width>50</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="styleSheet">
              <string notr="true"/>
             </property>
@@ -594,18 +592,14 @@ QTabBar::tab:only-one {
             </property>
            </widget>
           </item>
-          <item row="2" column="3">
-           <widget class="QPushButton" name="ref_load">
-            <property name="styleSheet">
-             <string notr="true"/>
-            </property>
-            <property name="text">
-             <string>Load</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="3">
+          <item row="0" column="2">
            <widget class="QPushButton" name="bias_save">
+            <property name="minimumSize">
+             <size>
+              <width>50</width>
+              <height>0</height>
+             </size>
+            </property>
             <property name="toolTip">
              <string/>
             </property>
@@ -614,6 +608,22 @@ QTabBar::tab:only-one {
             </property>
             <property name="text">
              <string>Save</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="2">
+           <widget class="QPushButton" name="ref_load">
+            <property name="minimumSize">
+             <size>
+              <width>50</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
+            </property>
+            <property name="text">
+             <string>Load</string>
             </property>
            </widget>
           </item>
